--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <!-- Pancratius Veteranen 1 homepage
 Auteur: Bart van der Tang -->
-<title>Pancratius Veteranen 1</title>
+<title>SCPB'22 Veteranen 1</title>
                 
   <meta name="keywords"
  content="">
