Updating index.html locally befor rebase

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
+<!DOCTYPE html">
+<html lang="nl">
 <head>
   <!-- Pancratius Veteranen 1 homepage
 Auteur: Bart van der Tang -->
-<title>SCPB'22 Veteranen 1</title>
+<title>SCPB'22 Veteranen 1 - improvement</title>
                 
   <meta name="keywords"
  content="">
